opam-version: "2.0"
version: "v0.17.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/sexp_string_quickcheck"
bug-reports: "https://github.com/janestreet/sexp_string_quickcheck/issues"
dev-repo: "git+https://github.com/janestreet/sexp_string_quickcheck.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/sexp_string_quickcheck/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"    {>= "5.1.0"}
  "core"     {>= "v0.17" & < "v0.18"}
  "parsexp"  {>= "v0.17" & < "v0.18"}
  "ppx_jane" {>= "v0.17" & < "v0.18"}
  "dune"     {>= "3.11.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Quickcheck helpers for strings parsing to sexps"
description: "
This library provides quickcheck generators, helpers, and shrinkers for
quickcheck-based tests that wish to exercise the concrete syntax of sexps,
including escape sequences and comments.
"
